[workspace]
resolver = "2"

members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axlog",
    "modules/axmm",
    "modules/axdma",
    "modules/axnet",
    "modules/axns",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",
    "modules/axipi",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/bwbench",
    "examples/shell",
    "examples/echoserver",
    "examples/wait_queue",
    "examples/irq",
    "examples/sleep",
    "examples/tls",
    "examples/wait_queue",

    "platforms/axplat-aarch64-sel4",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }

arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
axdisplay = { path = "modules/axdisplay" }
axdriver = { path = "modules/axdriver" }
axfs = { path = "modules/axfs" }
axhal = { path = "modules/axhal" }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm" }
axnet = { path = "modules/axnet" }
axns = { path = "modules/axns" }
axruntime = { path = "modules/axruntime" }
axsync = { path = "modules/axsync" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }
axipi = { path = "modules/axipi" }
axplat-aarch64-sel4 = { path = "platforms/axplat-aarch64-sel4" }

sel4-kit = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
srv-gate = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
uart-thread = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
common = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
common-macros = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

[patch.crates-io]
kernel_guard = { git = "https://github.com/croakexciting/kernel_guard.git", rev = "f0c503d" }
axcpu = { git = "https://github.com/croakexciting/axcpu.git", rev = "d40cb74" }
percpu = { git = "https://github.com/croakexciting/percpu.git", rev = "8d83e54" }
percpu_macros = { git = "https://github.com/croakexciting/percpu.git", rev = "8d83e54" }

[patch."https://github.com/seL4/rust-sel4"]
sel4 = { git = "https://github.com/yfblock/rust-sel4", rev = "1280281" }

[profile.release]
lto = true
