[package]
name = "arceos-bwbench"
version = "0.1.0"
edition = "2021"
authors = ["ChengXiang Qi <kuangjux@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { workspace = true, features = ["net", "onsel4"] }
axplat-aarch64-sel4 = { workspace = true, features = [] }
