[package]
name = "arceos-httpclient"
version = "0.1.0"
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>", "Dashuai Wu <wudashuaijss@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { workspace = true, features = ["net", "onsel4"], optional = true }
axplat-aarch64-sel4 = { workspace = true }

[features]
default = []
dns = ["axstd?/dns"]
