[package]
name = "interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
irq = []

[dependencies]
axplat-macros = "0.1"
crate_interface = "0.1"
const-str = "0.6.2"